0030478: Foundation Classes, NCollection_Array2 - provide Resize/Move methods consistent to NCollection_Array1